[tool.poetry]
name = "layup"
version = "0.1.0"
description = ""
authors = ["richiestuver <richiestuver@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
